// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Form Button Row Aligns 1`] = `
<div
  style={
    Object {
      "border": "1px solid blue",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
        "width": "50%",
      }
    }
  >
    <div
      className="psds-form-vertical-layout"
    >
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          left
        </div>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-form-button-row psds-form-button-row--align-left"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-form-button-row__button"
          >
            <button
              className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
              disabled={false}
            >
              <span
                aria-hidden={false}
                className="psds-button__text"
              >
                Save
              </span>
            </button>
          </div>
          <div
            className="psds-form-button-row__button"
          >
            <button
              className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark"
              disabled={false}
            >
              <span
                aria-hidden={false}
                className="psds-button__text"
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="psds-form-vertical-layout"
    >
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          right
        </div>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-form-button-row psds-form-button-row--align-right"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-form-button-row__button"
          >
            <button
              className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
              disabled={false}
            >
              <span
                aria-hidden={false}
                className="psds-button__text"
              >
                Save
              </span>
            </button>
          </div>
          <div
            className="psds-form-button-row__button"
          >
            <button
              className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark"
              disabled={false}
            >
              <span
                aria-hidden={false}
                className="psds-button__text"
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Form Button Row Single Button 1`] = `
<div
  style={
    Object {
      "border": "1px solid blue",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
        "width": "50%",
      }
    }
  >
    <div
      className="psds-form-vertical-layout"
    >
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-form-button-row psds-form-button-row--align-left"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-form-button-row__button"
          >
            <button
              className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
              disabled={false}
            >
              <span
                aria-hidden={false}
                className="psds-button__text"
              >
                Only One
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Form Null Children 1`] = `
<div
  style={
    Object {
      "border": "1px solid blue",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
        "width": "50%",
      }
    }
  >
    <div
      className="psds-form-vertical-layout"
    >
      <div
        className="psds-form-vertical-layout__child"
      >
        <h2
          className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          With null children
        </h2>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <label
          className="psds-text-input"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-text-input__label psds-theme--dark psds-text-input__label"
          >
            Name
          </div>
          <div
            className="psds-text-input__field-container"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
            >
              <div
                className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
              >
                <input
                  className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
                  disabled={false}
                  placeholder="What's your name?"
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Form Sample 1`] = `
<div
  style={
    Object {
      "border": "1px solid blue",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
        "width": "50%",
      }
    }
  >
    <div
      className="psds-form-vertical-layout"
    >
      <div
        className="psds-form-vertical-layout__child"
      >
        <h2
          className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          Sample form
        </h2>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <label
          className="psds-text-input"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-text-input__label psds-theme--dark psds-text-input__label"
          >
            Name
          </div>
          <div
            className="psds-text-input__field-container"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
            >
              <div
                className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
              >
                <input
                  className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
                  disabled={false}
                  placeholder="What's your name?"
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <label
          className="psds-text-input"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-text-input__label psds-theme--dark psds-text-input__label"
          >
            Alias
          </div>
          <div
            className="psds-text-input__field-container"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
            >
              <div
                className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
              >
                <input
                  className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
                  disabled={false}
                  placeholder="Do you have a nick name?"
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="psds-text-input__sub-label psds-theme--dark"
          >
            *Optional
          </div>
        </label>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <label
          className="psds-text-input"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-text-input__label psds-theme--dark psds-text-input__label"
          >
            Email address
          </div>
          <div
            className="psds-text-input__field-container"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus"
            >
              <div
                className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark psds-text-input__field--error"
              >
                <input
                  className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
                  disabled={false}
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                  value="steve@example.com"
                />
              </div>
            </div>
            <div
              className="psds-text-input__error"
            >
              <div
                className="psds-icon psds-icon--size-medium"
              >
                <svg
                  aria-label="warning icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    clipRule="evenodd"
                    d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="psds-text-input__sub-label psds-theme--dark"
          >
            Not a valid email address
          </div>
        </label>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-dropdown"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <label>
            <span
              className="psds-dropdown__label psds-theme--dark"
            >
              Occupation
            </span>
          </label>
          <div
            className="psds-dropdown__field-container"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-dropdown__field-halo"
            >
              <div
                className="psds-dropdown__field-aligner"
              >
                <button
                  aria-haspopup="listbox"
                  aria-labelledby="dropdown-button-4fzzzxjyl dropdown-label-4fzzzxjyl"
                  className="psds-dropdown__field psds-dropdown__field--appearance-default psds-theme--dark"
                  disabled={false}
                  id="dropdown-button-4fzzzxjyl"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <span
                    className="psds-dropdown__field-inner"
                  >
                    <span
                      aria-hidden={true}
                      className="psds-dropdown__button-sizer"
                    >
                      Select your occupation...
                    </span>
                    <span
                      className="psds-dropdown__placeholder psds-dropdown__placeholder--color"
                    >
                      Select your occupation...
                    </span>
                  </span>
                  <div
                    className="psds-dropdown__icon psds-dropdown__icon--appearance-default psds-theme--dark"
                  >
                    <div
                      className="psds-icon psds-icon--size-medium"
                    >
                      <svg
                        aria-label="caret down icon"
                        role="img"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
          >
            <a
              className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium"
              href="http://google.com"
            >
              <span
                className="psds-tag__label"
              >
                Foo
              </span>
            </a>
          </div>
          <span
            style={
              Object {
                "marginRight": "8px",
              }
            }
          />
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
          >
            <a
              className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium"
              href="http://google.com"
            >
              <span
                className="psds-tag__label"
              >
                Bar
              </span>
            </a>
          </div>
          <span
            style={
              Object {
                "marginRight": "8px",
              }
            }
          />
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
          >
            <a
              className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium"
              href="http://google.com"
            >
              <span
                className="psds-tag__label"
              >
                Baz
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <label
            className="psds-text-input"
          >
            <div
              className="psds-text-input__label psds-theme--dark psds-text-input__label"
            >
              Choose a Date
            </div>
            <div
              className="psds-text-input__field-container"
            >
              <div
                className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
              >
                <div
                  className="psds-text-input__field psds-text-input__field--appearance-default psds-theme--dark"
                >
                  <input
                    className="psds-theme--dark psds-text-input__field-input--appearance-default psds-text-input__field-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    value=""
                  />
                </div>
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <label
          className="psds-checkbox"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
          >
            <input
              checked={true}
              className="psds-screenreader-only psds-checkbox__input"
              readOnly={true}
              style={
                Object {
                  "maxWidth": "none",
                  "width": "100%",
                }
              }
              type="checkbox"
              value="someVal"
            />
            <div
              className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
            >
              <svg
                aria-label="Checkmark"
                className="psds-checkbox__icon"
                role="img"
                version="1.1"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                />
              </svg>
            </div>
          </div>
          <div
            className="psds-checkbox__label psds-theme--dark"
          >
            Checkbox selected
          </div>
        </label>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-form-divider psds-theme--dark"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-radio-group"
          role="radiogroup"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-radio-group__button-container"
          >
            <label
              className="psds-radio-button"
            >
              <div
                className="psds-radio-button__circle-outer"
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
                >
                  <div
                    className="psds-radio-button__circle psds-theme--dark"
                  />
                </div>
              </div>
              <input
                checked={false}
                className="psds-radio-button__input"
                name="sample"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                readOnly={true}
                type="radio"
                value="full"
              />
              <div
                className="psds-radio-button__label psds-theme--dark"
              >
                Full-time employement
              </div>
            </label>
            <label
              className="psds-radio-button"
            >
              <div
                className="psds-radio-button__circle-outer"
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
                >
                  <div
                    className="psds-radio-button__circle psds-theme--dark"
                  />
                </div>
              </div>
              <input
                checked={false}
                className="psds-radio-button__input"
                name="sample"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                readOnly={true}
                type="radio"
                value="part"
              />
              <div
                className="psds-radio-button__label psds-theme--dark"
              >
                Part-time employement
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-form-divider psds-theme--dark"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <label
          className="psds-switch psds-switch--label-align-right"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
          >
            <div
              className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
            >
              <div
                className="psds-switch__thumb psds-switch__thumb--size-large"
              />
            </div>
          </div>
          <input
            checked={false}
            className="psds-switch__checkbox"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            tabIndex={0}
            type="checkbox"
          />
          <span
            className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
          >
            toggle
          </span>
        </label>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-form-divider psds-theme--dark"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <label
          className="psds-text-area"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-text-area__label psds-theme--dark"
          >
            Comment
          </div>
          <div
            className="psds-text-area__field-container"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
            >
              <textarea
                className="psds-text-area__field psds-text-area__field--appearance-default psds-theme--dark"
                disabled={false}
                placeholder="Anything else to report?"
                style={
                  Object {
                    "height": 112,
                  }
                }
              />
            </div>
          </div>
        </label>
      </div>
      <div
        className="psds-form-vertical-layout__child"
      >
        <div
          className="psds-form-button-row psds-form-button-row--align-left"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            className="psds-form-button-row__button"
          >
            <button
              className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
              disabled={false}
            >
              <span
                aria-hidden={false}
                className="psds-button__text"
              >
                Save
              </span>
            </button>
          </div>
          <div
            className="psds-form-button-row__button"
          >
            <button
              className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark"
              disabled={false}
            >
              <span
                aria-hidden={false}
                className="psds-button__text"
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
